Modification swagger
