# Serveur/python-flask-server/swagger_server/controllers/get_data_controller.py
@@ -5,7 +5,7 @@ from swagger_server.models.matrix import Matrix  # noqa: E501
 from swagger_server import util
 
 
-def get_maxtrix_master_get_maxtrix_get_maxtrix():  # noqa: E501
+def get_maxtrix():  # noqa: E501
     """Get Confusion Matrix of all Algorithms
 
     Get Confusion Matrix of all Algorithms  # noqa: E501
