# Serveur/python-flask-server/swagger_server/controllers/test_data_controller.py
@@ -1,11 +1,12 @@
 import connexion
-from swagger_server.algorithmes.kmeans import findUsingKMeans
-from swagger_server.controllers.manage_training_controller import trainData
+import six
+
 from swagger_server.models.data import Data  # noqa: E501
-import swagger_server.algorithmes.utile
+from swagger_server.models.solution import Solution  # noqa: E501
+from swagger_server import util
 
 
-def test_data_master_test_data_test_data(image):  # noqa: E501
+def test_data(image):  # noqa: E501
     """Add a train data in database
 
     Add a train data in database  # noqa: E501
@@ -15,10 +16,6 @@ def test_data_master_test_data_test_data(image):  # noqa: E501
 
     :rtype: Solution
     """
-    result = findUsingKMeans([t[0] for t in trainData], image, swagger_server.algorithmes.utile.distValue)
-    print(result)
-
     if connexion.request.is_json:
         image = Data.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
-    
